--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,10 @@ ul {
 
 /*font-family: 'ProximaNova', sans-serif;*/
 /*font-family:'GothamPro', sans-serif;*/
+html {
+  min-width: 576px;
+}
+
 body {
   font-family: "ProximaNova", sans-serif;
   font-weight: 400;
@@ -185,10 +189,10 @@ body {
 }
 
 body.overflow {
-  /*height: 100%;*/
+  height: 100%;
+  position: relative;
   overflow: hidden !important;
-  /*width: 100%;*/
-  /*position: fixed;*/
+  -webkit-overflow-scrolling: auto;
 }
 
 /*MAIN STYLES*/
@@ -1131,12 +1135,39 @@ input, button {
   width: 100%;
   float: left;
   height: 0;
+  z-index: 97;
 }
 
 .social-fixed .social-list {
   margin-right: -100px;
   float: right;
   position: relative;
+}
+
+.social-fixed .social-list__item .add-us {
+  position: absolute;
+  width: 0;
+  top: 0;
+  right: 100%;
+  height: 100%;
+  text-transform: uppercase;
+  line-height: 48px;
+  font-size: 14px;
+  font-weight: 700;
+  background: #fff;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
+  -webkit-transition: width .5s;
+  -o-transition: width .5s;
+  transition: width .5s;
+  white-space: nowrap;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.social-fixed .social-list__item:hover .add-us {
+  color: #0099d7;
+  width: 200px;
 }
 
 .social-fixed.active .social-list {
@@ -1175,6 +1206,7 @@ input, button {
   -webkit-transition: background .3s , color .3s;
   -o-transition: background .3s , color .3s;
   transition: background .3s , color .3s;
+  position: relative;
 }
 
 .social-list__item a {
@@ -1655,7 +1687,7 @@ input, button {
   -ms-transform-origin: right top;
   transform-origin: right top;
   font-size: 16px;
-  opacity: 1;
+  opacity: 0;
   -webkit-transition: opacity .3s , -webkit-transform .3s;
   transition: opacity .3s , -webkit-transform .3s;
   -o-transition: transform .3s , opacity .3s;
@@ -6015,7 +6047,7 @@ input, button {
 /*=====================*/
 /*MODAL*/
 .modal {
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   padding-top: 140px;
@@ -6037,6 +6069,8 @@ input, button {
   -webkit-transition: opacity .4s;
   -o-transition: opacity .4s;
   transition: opacity .4s;
+  -webkit-overflow-scrolling: touch;
+  position: fixed;
 }
 
 .modal-ask__price .current-modification {
@@ -6445,6 +6479,13 @@ input, button {
   /*==================*/
 }
 
+@media (max-width: 1439px) {
+  .header-content .category-list .dropdown-subcategory {
+    max-height: 590px;
+    overflow-x: hidden;
+  }
+}
+
 @media (max-width: 1279px) {
   .pagename-main .dropdown-menu {
     margin-left: 0;
@@ -6457,6 +6498,9 @@ input, button {
   }
   .social-fixed .social-list {
     margin: 0;
+  }
+  .social-fixed .social-list .add-us {
+    display: none;
   }
   .dropdown-menu {
     padding: 0;
@@ -7677,26 +7721,41 @@ input, button {
   }
 }
 
-@media only screen and (min-device-width: 480px) and (max-device-width: 720px) and (orientation: landscape) {
+@media only screen and (device-width: 667px) and (device-height: 375px) and (orientation: landscape) {
   .header-content .category-dropdown {
     position: fixed;
     top: 60px;
     height: 100%;
     overflow-x: hidden;
+    width: 100%;
   }
   .header-content .category-dropdown .category-list {
-    height: 590px;
+    min-height: 590px;
   }
 }
 
-@media only screen and (min-device-width: 720px) and (max-device-width: 960px) and (orientation: landscape) {
+@media only screen and (device-width: 736px) and (device-height: 414px) and (orientation: landscape) {
   .header-content .category-dropdown {
     position: fixed;
     top: 68px;
     height: 100%;
     overflow-x: hidden;
+    width: 100%;
   }
   .header-content .category-dropdown .category-list {
-    height: 590px;
+    min-height: 590px;
+  }
+}
+
+@media only screen and (device-width: 812px) and (device-height: 375px) and (orientation: landscape) {
+  .header-content .category-dropdown {
+    position: fixed;
+    top: 68px;
+    height: 100%;
+    overflow-x: hidden;
+    width: 100%;
+  }
+  .header-content .category-dropdown .category-list {
+    min-height: 590px;
   }
 }
