--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,142 @@ ul {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cart1:before {
+  content: "\e922";
+}
+
+.icon-list:before {
+  content: "\e91f";
+}
+
+.icon-grid:before {
+  content: "\e920";
+}
+
+.icon-mobile-social:before {
+  content: "\e921";
+}
+
+.icon-info:before {
+  content: "\e91e";
+}
+
+.icon-account:before {
+  content: "\e901";
+}
+
+.icon-arow4:before {
+  content: "\e902";
+}
+
+.icon-arrow1:before {
+  content: "\e903";
+}
+
+.icon-arrow2:before {
+  content: "\e904";
+}
+
+.icon-arrow3:before {
+  content: "\e905";
+}
+
+.icon-arrow4:before {
+  content: "\e906";
+}
+
+.icon-cart:before {
+  content: "\e907";
+}
+
+.icon-check:before {
+  content: "\e908";
+}
+
+.icon-chevron-left:before {
+  content: "\e909";
+}
+
+.icon-chevron:before {
+  content: "\e90a";
+}
+
+.icon-close:before {
+  content: "\e90b";
+}
+
+.icon-download:before {
+  content: "\e90c";
+}
+
+.icon-email:before {
+  content: "\e90d";
+}
+
+.icon-email1:before {
+  content: "\e90e";
+}
+
+.icon-fax:before {
+  content: "\e90f";
+}
+
+.icon-message:before {
+  content: "\e910";
+}
+
+.icon-minus:before {
+  content: "\e911";
+}
+
+.icon-Object:before {
+  content: "\e912";
+}
+
+.icon-Object2:before {
+  content: "\e913";
+}
+
+.icon-phone:before {
+  content: "\e914";
+}
+
+.icon-phone1:before {
+  content: "\e915";
+}
+
+.icon-plus:before {
+  content: "\e916";
+}
+
+.icon-skype-brands:before {
+  content: "\e917";
+}
+
+.icon-sort-down-solid:before {
+  content: "\e918";
+}
+
+.icon-sort:before {
+  content: "\e919";
+}
+
+.icon-swipe:before {
+  content: "\e91a";
+}
+
+.icon-telegram-plane-brands:before {
+  content: "\e91b";
+}
+
+.icon-trash:before {
+  content: "\e91c";
+}
+
+.icon-viber-brands:before {
+  content: "\e91d";
+}
+
 .icon-arrow:before {
   content: "\e900";
 }
@@ -344,12 +480,11 @@ input, button {
 }
 
 .breadcrumbs-list__item:after {
-  content: '\f061';
+  content: '\e902';
   font-size: 9px;
-  font-family: 'Font Awesome\ 5 Free';
-  font-size: 10px;
-  font-weight: 900;
-  margin-left: 10px;
+  font-family: 'icomoon';
+  font-size: 12px;
+  margin-left: 8px;
   line-height: 15px;
   display: inline-block;
   vertical-align: middle;
@@ -598,9 +733,9 @@ input, button {
 }
 
 .header-content__form button:before {
-  content: '\f002';
+  content: '\e913';
   font-size: 24px;
-  font-family: 'Font Awesome\ 5 Free';
+  font-family: 'icomoon';
   font-weight: 900;
   color: #0099d7;
 }
@@ -642,7 +777,7 @@ input, button {
   width: 17px;
   height: 15px;
   vertical-align: middle;
-  font-size: 15px;
+  font-size: 16px;
   color: #0099d7;
   margin-left: 20px;
   transition: color .3s;
@@ -894,9 +1029,8 @@ input, button {
 }
 
 .info-dropdown .title:before {
-  content: '\f0dd';
-  font-family: 'Font Awesome\ 5 Free';
-  font-weight: 900;
+  content: '\e918';
+  font-family: 'icomoon';
   position: absolute;
   right: 0;
   top: 50%;
@@ -1504,7 +1638,7 @@ input, button {
 .product-card__download {
   width: 19px;
   height: 22px;
-  font-size: 22px;
+  font-size: 24px;
   cursor: pointer;
   transition: color 0.3s;
 }
@@ -1603,9 +1737,21 @@ input, button {
 .product-card__img {
   height: 85px;
   margin-bottom: 30px;
+  text-align: center;
+  font-size: 0;
+}
+
+.product-card__img:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 0;
+  height: 100%;
 }
 
 .product-card__img img {
+  display: inline-block !important;
+  vertical-align: middle;
   max-width: 135px;
   max-height: 85px;
   margin: auto;
@@ -1719,21 +1865,9 @@ input, button {
   width: 100%;
   height: calc(100% - 45px);
   margin: 0;
-  text-align: center;
-  font-size: 0;
-}
-
-.product-card--list .product-card__top .product-card__img:before {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  width: 0;
-  height: 100%;
 }
 
 .product-card--list .product-card__top .product-card__img img {
-  display: inline-block;
-  vertical-align: middle;
   max-width: 100%;
   max-height: 100%;
 }
@@ -1758,6 +1892,7 @@ input, button {
   position: static;
   box-shadow: none;
   padding: 0;
+  opacity: 1;
   font-size: 15px;
 }
 
@@ -1889,6 +2024,10 @@ input, button {
 .section-news .title {
   width: 100%;
   transition: color .3s;
+}
+
+.section-news .section-title .title:hover {
+  color: #1a1a1a;
 }
 
 .section-news__content {
@@ -2163,7 +2302,7 @@ input, button {
   padding: 0 65px 0 20px;
   position: relative;
   background-color: #fff;
-  height: 75px;
+  height: 75px !important;
   cursor: pointer;
   font-size: 0;
 }
@@ -2287,6 +2426,7 @@ input, button {
   right: 17px;
   top: 50%;
   transform: translateY(-50%);
+  font-size: 30px;
 }
 
 .tabs-card__block {
@@ -2298,8 +2438,12 @@ input, button {
 }
 
 .tabs-card__text {
-  padding: 20px 30px 17px 30px;
-  line-height: 0;
+  padding: 20px 30px 0 30px;
+  font-size: 16px;
+  line-height: 24px;
+  height: 279px;
+  overflow: hidden;
+  margin-bottom: 17px;
 }
 
 .tabs-card__text .title {
@@ -2318,13 +2462,6 @@ input, button {
   overflow: hidden;
   margin-bottom: 10px;
   line-height: 22px;
-}
-
-.tabs-card__text .text {
-  font-size: 16px;
-  line-height: 24px;
-  height: 168px;
-  overflow: hidden;
 }
 
 /*=====================*/
@@ -2508,9 +2645,8 @@ input, button {
 }
 
 .article-link:before {
-  content: '\f30a';
-  font-family: 'Font Awesome\ 5 Free';
-  font-weight: 900;
+  content: '\e906';
+  font-family: 'icomoon';
   font-size: 30px;
   position: absolute;
   left: 0;
@@ -2526,7 +2662,7 @@ input, button {
 }
 
 .article__next:before {
-  content: '\f30b';
+  content: '\e905';
   left: auto;
   right: 0;
 }
@@ -2542,8 +2678,9 @@ input, button {
 .news-tabs .overflow-arrow {
   position: absolute;
   left: 50%;
-  top: -25px;
+  top: -13px;
   font-size: 26px;
+  color: #575757;
   line-height: 1;
   transform: translateX(-50%);
   opacity: 0;
@@ -2669,9 +2806,12 @@ input, button {
   line-height: 22px;
 }
 
+.news-card + .news-card {
+  border-top: 1px solid #eaeaea;
+}
+
 .news-card {
   padding: 40px 0;
-  border-top: 1px solid #eaeaea;
   font-size: 0;
   opacity: 0;
   transition: opacity .4s;
@@ -2898,6 +3038,12 @@ input, button {
 
 .pagename-news .card-slider {
   margin-top: 90px;
+}
+
+.pagename-news .news-content__top {
+  border-bottom: 1px solid #eaeaea;
+  margin-bottom: 0;
+  padding-bottom: 10px;
 }
 
 /*pagename-contacts*/
@@ -3216,9 +3362,8 @@ input, button {
 }
 
 .filer-block__title:before {
-  content: '\f0dd';
-  font-weight: 900;
-  font-family: 'Font Awesome\ 5 Free';
+  content: '\e918';
+  font-family: 'icomoon';
   position: absolute;
   right: 0px;
   font-size: 15px;
@@ -3317,9 +3462,8 @@ input, button {
 }
 
 .filer-block__more .title:after {
-  content: '\f0dd';
-  font-weight: 900;
-  font-family: 'Font Awesome\ 5 Free';
+  content: '\e918';
+  font-family: 'icomoon';
   position: absolute;
   right: -25px;
   margin-top: -2px;
@@ -3497,9 +3641,8 @@ input, button {
 }
 
 .wrap-drop .selected-el::after {
-  content: '\f0dd';
-  font-weight: 900;
-  font-family: 'Font Awesome\ 5 Free';
+  content: '\e918';
+  font-family: 'icomoon';
   position: absolute;
   right: 20px;
   font-size: 15px;
@@ -3655,7 +3798,8 @@ input, button {
   display: block;
   text-align: center;
   cursor: pointer;
-  transition: box-shadow .3s ,background .3s;
+  opacity: 0;
+  transition: box-shadow .3s ,background .3s,opacity .3s;
 }
 
 .product-image__large .button:before {
@@ -3979,9 +4123,8 @@ input, button {
 }
 
 .product-characteristics .show-more .button:after {
-  content: '\f0dd';
-  font-weight: 900;
-  font-family: 'Font Awesome\ 5 Free';
+  content: '\e918';
+  font-family: 'icomoon';
   position: absolute;
   right: 0px;
   line-height: 9px;
@@ -4376,6 +4519,15 @@ input, button {
   width: calc(77% - 30px);
   margin: 0 0 0 30px;
   height: auto;
+  overflow: hidden;
+}
+
+.solutions .tabs-card.active .tabs-card__text {
+  display: inline;
+}
+
+.solutions .tabs-card.active .link:before {
+  content: 'Скрыть';
 }
 
 .solutions .tabs-card__title {
@@ -4401,18 +4553,34 @@ input, button {
 
 .solutions .tabs-card__img {
   height: 340px;
+  margin-right: 30px;
+  float: left;
+}
+
+.solutions .tabs-card .tabs-card__block {
+  display: inline;
 }
 
 .solutions .tabs-card__text {
-  padding: 0px 30px 0px 30px;
+  display: block;
+  padding: 0px;
+  margin-bottom: 0;
+  max-height: 340px;
+  transition: max-height .5s;
+  height: auto;
 }
 
-.solutions .tabs-card__text .text {
-  height: 240px;
+.solutions .tabs-card__text > * {
+  display: block;
 }
 
 .solutions .tabs-card .link {
   margin-top: 30px;
+  position: relative;
+}
+
+.solutions .tabs-card .link:before {
+  content: 'Подробнее';
 }
 
 .solution-section .large-button {
@@ -4487,6 +4655,7 @@ input, button {
 .cart-block__total .back i {
   margin-right: 15px;
   vertical-align: middle;
+  font-size: 30px;
 }
 
 .cart-block__total .price-table {
@@ -4624,8 +4793,8 @@ input, button {
 }
 
 .cart-block__order .personal-status__block:after {
-  content: '\f00c';
-  font-family: 'Font Awesome\ 5 Free';
+  content: '\e908';
+  font-family: 'icomoon';
   font-size: 18px;
   position: absolute;
   right: 7px;
@@ -4770,7 +4939,7 @@ input, button {
 
 .cart-buttons__item:first-child i {
   display: none;
-  margin-left: 17px;
+  margin: -4px 0 0 17px;
   vertical-align: middle;
   font-size: 18px;
 }
@@ -5195,6 +5364,60 @@ input, button {
   z-index: 11;
 }
 
+.not-found {
+  width: 738px;
+  margin: auto;
+  text-align: center;
+  margin-top: 58px;
+}
+
+.not-found__content .title {
+  color: #3d3d3d;
+  font-weight: 700;
+  font-size: 46px;
+  line-height: 1;
+  margin-bottom: 57px;
+}
+
+.not-found__content .text {
+  font-weight: 700;
+  color: #3d3d3d;
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 35px;
+}
+
+.not-found__content .standart-btn {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.not-found__content .standart-btn + .standart-btn {
+  margin-left: 30px;
+}
+
+.not-found__middle {
+  background: 50% 50% no-repeat;
+  background-size: cover;
+  padding: 34% 0 0;
+  margin-bottom: 60px;
+  /*font-size: 0;
+    &>*{
+      display: inline-block;
+      vertical-align: middle;
+      font-size: 356px;
+      font-family:'GothamPro';
+      font-weight: 400;
+      line-height: 1;
+      color: #3d3d3d;
+    }
+    img{
+      width: 250px;
+      height: 250px;
+    }*/
+}
+
 /*=====================*/
 /*FOOTER*/
 /*=====================*/
@@ -5236,14 +5459,28 @@ input, button {
 .footer-phone .link {
   display: block;
   background-color: #e1e1e1;
-  padding: 16px 35px;
+  padding: 0 35px;
   line-height: 1;
+  height: 48px;
+  font-size: 0;
+}
+
+.footer-phone .link:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 0;
+  height: 100%;
+}
+
+.footer-phone .link > * {
+  vertical-align: middle;
   font-size: 16px;
 }
 
 .footer-phone .link i {
   width: 18px;
-  font-size: 15px;
+  font-size: 20px;
   margin-right: 20px;
   height: 15px;
   text-align: center;
@@ -5520,6 +5757,10 @@ input, button {
   background: #0099d7;
 }
 
+.modal-form__label.error i {
+  color: #d20909 !important;
+}
+
 .modal-form__label.error:after {
   width: 100%;
   background: #d20909;
@@ -5580,6 +5821,8 @@ input, button {
   font-size: 18px;
   width: 16px;
   text-align: center;
+  color: #ababab;
+  transition: color .3s;
 }
 
 .modal-form__content {
@@ -5660,6 +5903,9 @@ input, button {
     background: #00a8ec;
     color: #fff;
   }
+  .modal-form__label:hover i {
+    color: #0099d7;
+  }
   .modal-form__label:hover:after {
     width: 100%;
   }
@@ -5731,6 +5977,9 @@ input, button {
   .mobile-list:hover ~ input.num {
     color: #009bd9;
   }
+  .product-image__large:hover .button {
+    opacity: 1;
+  }
 }
 
 @media (max-width: 1679px) {
@@ -5760,6 +6009,10 @@ input, button {
     vertical-align: middle;
     cursor: pointer;
   }
+  .header-content .form-holder__btn i {
+    font-size: 25px;
+    vertical-align: middle;
+  }
   .header-content__form {
     position: absolute;
     top: 100%;
@@ -5784,8 +6037,8 @@ input, button {
     width: 72px;
   }
   .header-content__form button:before {
-    content: '\f061';
-    font-size: 14px;
+    content: '\e902';
+    font-size: 18px;
     color: #1a1a1a;
     transition: color .3s;
   }
@@ -5906,6 +6159,7 @@ input, button {
     width: 100%;
     height: 100%;
     line-height: 68px;
+    font-size: 25px;
     right: 0;
     top: 0;
     z-index: 10;
@@ -5934,7 +6188,6 @@ input, button {
     display: inline-block;
     text-align: center;
     width: 100%;
-    /*line-height: 68px;*/
   }
   .header-content__cart .cart-price__quantity {
     background-color: transparent;
@@ -5964,6 +6217,10 @@ input, button {
     border-left: 1px solid #d3d3d3;
     border-right: 1px solid #d3d3d3;
     cursor: pointer;
+  }
+  .info-dropdown .tablet-button:before {
+    display: inline-block;
+    transform: translateY(2px);
   }
   .info-dropdown .title {
     display: none;
@@ -6501,6 +6758,9 @@ input, button {
   .calc-block .mobile-list ul li.selected {
     color: #ababab;
   }
+  .not-found {
+    width: 690px;
+  }
   /*===================*/
   /*footer*/
   .footer-aligner {
@@ -6508,7 +6768,7 @@ input, button {
     margin-bottom: 40px;
   }
   .footer-phone .link {
-    padding: 16px 14px;
+    padding: 0 13px;
   }
   .footer-info {
     width: calc(100% - 526px);
@@ -6559,6 +6819,12 @@ input, button {
     width: 142px;
   }
   /*===================*/
+}
+
+@media (max-width: 1024px) {
+  .product-image__large .button {
+    opacity: 1;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -6654,6 +6920,9 @@ input, button {
   .social-fixed__mobile {
     display: block;
   }
+  .social-fixed__mobile > i {
+    font-size: 23px;
+  }
   .social-fixed.active .social-list {
     width: 144px;
     opacity: 1;
@@ -6730,13 +6999,13 @@ input, button {
     height: 340px;
     margin: 0 30px 30px 0;
   }
+  .tabs-card__text {
+    overflow: initial;
+    height: auto;
+  }
   .tabs-card__text .title {
     display: block;
     overflow: visible;
-    height: auto;
-  }
-  .tabs-card__text .text {
-    overflow: initial;
     height: auto;
   }
   .tabs-card__block {
@@ -6932,10 +7201,21 @@ input, button {
     float: none;
     transition: margin .3s;
   }
+  /*not-fond*/
+  .not-found {
+    width: 546px;
+  }
+  .not-found .standart-btn {
+    display: block;
+    margin: auto;
+  }
+  .not-found .standart-btn + .standart-btn {
+    margin: 30px auto 0;
+  }
   /*===============*/
   /*footer*/
   .footer-phone .link {
-    padding: 16px 39px;
+    padding: 0 37px;
   }
   .footer-info {
     margin-top: 20px;
